// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistreringEvent stores a transaction log 1`] = `
[
  {
    "action": "update",
    "collectionName": "CourseRound",
    "createdAt": "1884-01-01 Test Dummy",
    "delta": {
      "id": "e51b9585-9501-11ee-a0ce-a9a57d284dbd",
      "modules": [
        {
          "id": "6b741a04-9505-11ee-a0ce-a9a57d284dbd",
        },
        {
          "canceled": false,
          "code": "1239",
          "credits": "10.0",
          "gradingScheme": [
            "A",
            "B",
            "C",
            "D",
            "E",
            "FX",
            "F",
          ],
          "moduleRoundId": "6b741a05-9505-11ee-a0ce-a9a57d284dbd",
          "name": "Testmodul 1239",
        },
      ],
    },
    "relatedId": "__dummy_id__",
  },
]
`;

exports[`RegistreringEvent writes correct data to db 1`] = `
{
  "CourseRound": {
    "id": "e51b9585-9501-11ee-a0ce-a9a57d284dbd",
    "modules": [
      {
        "id": "6b741a04-9505-11ee-a0ce-a9a57d284dbd",
      },
      {
        "canceled": false,
        "code": "1239",
        "credits": "10.0",
        "gradingScheme": [
          "A",
          "B",
          "C",
          "D",
          "E",
          "FX",
          "F",
        ],
        "moduleRoundId": "6b741a05-9505-11ee-a0ce-a9a57d284dbd",
        "name": "Testmodul 1239",
      },
    ],
  },
}
`;
